<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TV Remote</string>
    <string name="power">POWER</string>
    <string name="mute">MUTE</string>
    <string name="up">▲</string>
    <string name="down">▼</string>
    <string name="left">◄</string>
    <string name="right">►</string>
    <string name="ok">OK</string>
    <string name="vol_up">VOL+</string>
    <string name="vol_down">VOL-</string>
    <string name="ch_up">CH+</string>
    <string name="ch_down">CH-</string>
    <string name="source">SOURCE</string>
    <string name="volume">Volume</string>
    <string name="channel">Channel</string>
    <string name="status_ready">Ready</string>
    <string name="status_ir_not_available">IR Blaster not available on this device</string>
    <string name="status_command_sent">Command sent</string>
    
    <!-- Configuration Screen -->
    <string name="configure_remote">Configure Remote</string>
    <string name="remote_name">Remote Name</string>
    <string name="quick_setup">Quick Setup</string>
    <string name="quick_setup_hint">Select a preset to auto-configure for your TV brand</string>
    <string name="manual_config">Manual Configuration</string>
    <string name="frequency">Frequency (Hz)</string>
    <string name="address_hex">Address (Hex)</string>
    <string name="button_codes">Button Command Codes (Hex)</string>
    <string name="test">TEST</string>
    <string name="test_all_buttons">Test All Buttons</string>
    <string name="save_remote">Save Remote Configuration</string>
    <string name="back">Back</string>
    
    <!-- Menu -->
    <string name="action_settings">Configure Remote</string>
    <string name="action_manage_remotes">Switch Remote</string>
</resources>

